src/hackmysql.css
/* ... */
img.c33 { margin-right: auto; margin-left: auto; width: 33%; }
hr { height: 0; border: 0; border-top: 1px solid lightgray; }
dt { font-style: italic; }
dd { margin-left: 2rem; }
button:hover { cursor: pointer; }
mark {
  background-color: pink;
  border-bottom: 3px solid hotpink;
  padding: 0 5px;
  border-top-left-radius: 5px;
  border-bottom-right-radius: 5px;
}
.comments {margin:2rem 1rem;}

/* post */
.post-preview {  margin-top: 2rem; }
.post-preview > a { text-decoration: none; color: black; }
.post-subtitle { margin-top: 0.5rem; color: #777; }
.post-meta       { color: #707070; font-style: italic; margin: 0.5rem 0 2rem 0;}
.post-meta a     { color: #404040; text-decoration: none; }
.post-meta > div:first-child { display: flex; align-items: center; gap: 0.5em; } /* publish date */
.read-more { font-style: italic; text-align: right; }

/* table */
div.to { overflow-x: scroll; } /* table overflow */
:is(h1,h2,h3,h4) + div.to > table { margin-top: 1em; }
table {
  margin: 0;
  padding: 0;
  border-collapse: collapse;
}
table tr {
  border-top: 1px solid #cccccc;
  margin: 0;
  padding: 0;
}
table tr:nth-child(2n) {
  background-color: #f8f8f8;
}
table tr th {
  font-weight: bold;
  border: 1px solid #cccccc;
  text-align: left;
  padding: 5px 10px;
}
table tr td {
  border: 1px solid #cccccc;
  text-align: left;
  padding: 5px 10px;
}
table tr th :first-child,
table tr td :first-child {
  margin-top: 0;
}
table tr th :last-child,
table tr td :last-child {
  margin-bottom: 0;
}
div.res {
  width: 100%;
  font-family: 'Courier';
  overflow: scroll;
  padding: 1rem;
}
table.list {
  position: relative;
  background-color: white;
  border: 0;
  min-width: max-content;
}
table.list tr,
table.list th,
table.list td {
  background-color: white;
  border: 0;
  margin: 0;
  padding: 0;
  font-weight: unset;
}

.kw {
  font-weight: bold;
  background-color: lime;
}
div.more { margin-top: 4rem; }
span.more { font-size: 1.2rem; }
.blogs > div {
  line-height: 2rem;
  padding-left: 2rem;
}
.tools {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-top: 2rem;
}
.tool {
  border: 1px solid gray;
  padding: 0.5rem;
  border-radius: 15px;
  display: flex;
  flex-direction: row;
  align-items: center;
  cursor: pointer;
}
.tool:hover { box-shadow: 0 0 10px 5px rgb(0, 255, 255, 75%); }
img.ion { display: inline; height: 2rem; }
.tool > img.ion { margin-right: 1rem; }

div.blog-tags a { color: #005F87; }
div.blog-tags a:hover { text-decoration: underline; }

.note {
  background-color: #f0f7fb;
  border-left: solid 4px #3498db;
  border-radius: 5px;
  padding: 1rem 2rem;
  margin: 2rem 0;
}
h2 + .note {
  margin-top: 1em;
}
.note.warn {
  background-color: #ffdfdf;
  border-color: red;
  text-align: justify;
}
.warn > a, a:has(.figure) { color:black; text-decoration:none; }
.left-icon {display:flex; align-items:center;}
.left-icon > img {float:left; margin-right:1rem;}
.note.warn.left-icon {padding-left: 1rem;}
.center {display:flex; align-items:center;}
.mm {margin: 1rem 0;}
button#focus {
  float: right;
  font-size: inherit;
  color: inherit;
  border: 0;
  background: none;
}

p.figure {
  margin-top: -0.5rem;
  margin-bottom: 1rem;
  font-size: 0.7rem;
  font-style: italic;
  color: #666666;
}
div.footnotes { margin-top: 1rem; }
div.footnotes > ol {
  margin-top: 1rem;
  font-size: 0.8em;
  padding-left: 1rem;
}
.tag {
  border-radius: 25px;
  border: 1px solid black;
  padding: 0 5px 0 5px;
  margin-right: 10px;
}
.withshadow { box-shadow: 0 4px 8px 0 rgb(0 0 0 / 40%); }
.rounded { border-radius: 20px; }
.highlight { overflow: scroll; }
.sidebyside {
  display: flex;
  gap: 0.5rem;
  overflow-x: auto;
}

/* book */
div.my-book-cover { text-align: center; margin-top: 1rem; }
img.my-book-cover {
  margin: auto;
  margin-bottom: 2rem;
  box-shadow: 0 4px 8px 0 rgb(0, 0, 0, 50%);
}
.book-links {
  display: flex;
  gap: 1rem;
  align-items: center;
  justify-content: center;
}
.book-button {
  position: relative;
  font-size: 0.7rem;
  display: inline-block;
  margin-bottom: 1rem;
  padding: 8px 8px;
  word-break: keep-all;
  border-radius: 5px;
  background-color: #e00;
  color: white;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: .02rem;
  text-decoration: none;
}
.book-button:hover, .book-button:focus {color: white; text-decoration: none;}
.my-book-desc { text-align: justify; }
div.book-covers img { display: inline-block; margin: 0.5rem; }

/* toc */
nav a { text-decoration: none; }
nav#toc {
  font-size: 0.8rem;
  padding-right: 1rem;
}
nav#toc a { color: black; }
nav#toc a:hover { text-decoration: underline; }
nav#toc ul { padding: 0; }
nav#toc nav > ul > li { /* each section: h1 + subs */
  margin-bottom: 1rem;
}
nav#toc ul ul { /* h2 */
  padding-left: 1rem;
  list-style-type: none;
}

/* ------------------------------------------------------------------------ */
/* Single Column                                                            */
/* ------------------------------------------------------------------------ */

/* [768, inf)px wide */
nav#menu {
  min-height: 75px;
  background: black;
  position: relative;
  padding-left: 1rem;
  border-bottom: 5px solid cyan;
}
nav#menu> a {  /* hack mysql> link */
  color: hotpink;
  padding-right: 0.5rem;
  font-size: 20px;
}
nav#menu > a:hover { text-decoration: none; }
.menuItem {
  display: inline-block;
  min-height: inherit; /* item height = menu height */
}
.menuButton {
  color: cyan;
  border: 0;
  background: none;
  position: relative;
  font-size: 20px;
  min-height: inherit; /* fill menu item to align menu bottom|submenu top */
  padding: 0;
  padding-right: 0.75rem;
}
.submenu {
  display: none;
  position: absolute;
  z-index: 1;
  width: auto;
  margin-right: 2rem;
  background: black;
  color: white;
  line-height: 1.75rem;
  padding: 0 1rem 0.5rem 1rem;
  border: 5px solid cyan;
  border-top: 0;
  border-radius: 0 0 15px 15px;
}
/* ... */

